# hexapod-robi

./: README.md
hardware/: READEME.md  README.md
hardware/body/scad/: connector_boxes.scad  mounttest.scad  support.scad
hardware/electronics/sensors/tests/: AUTHORS  INSTALL  Makefile.am  adc0838.c  autogen.sh  configure.ac
hardware/electronics/sensors/tests/include/: adc0838.h  common.h  config.h.in  digiters.h  digitizers.h  hc-sr04.h  mpu6050.h
hardware/electronics/sensors/tests/lib/: Makefile.am
hardware/electronics/sensors/tests/src/: Makefile.am  adc0838.c  hc-sr04.c  hcsr04.c  mpu6050.c  test_hcsr04.c
hardware/legs/scad/: joint_30_degrees.scad  leg_connector_boxes.scad  sensorunit_bottom.scad  sensorunit_middle.scad  sensorunit_top.scad  spinnenbein_v0.2.scad
hardware/scad/: bodybottom.scad  bodytop.scad  common.scad  leg.scad  side_buttons.scad  side_closed.scad  side_power.scad  sidepart.scad
hardware/scad/body/: bodybottom.scad  bodymiddle.scad  bodytop.scad  connector_boxes.scad  mount.scad  mount2.scad  side_battery.scad  side_buttons.scad  side_power.scad  side_sensor.scad
hardware/scad/lib/: globals.scad  (+4 more)
hardware/stl/: leg.stl  side_buttons.stl  side_power.stl
openscad/scad/: bodybottom.scad  bodytop.scad  common.scad  connector_boxes.scad  side_buttons.scad  side_power.scad
openscad/stl/: bodytop.stl  connector_boxes.stl
prototypes/: hexapod_config.py  zero_position.py
software/: README.md  hexapod_config.py  scan.py  walk.py  zero_position.py
software/sensors/: ChangeLog  Makefile.am  configure.ac
software/tests/: lowlevel.py
(+22 files in other folders)
